      the penalty to be a flat value rather than per difference in level.
   -- Fixed a bug in teleport and such which allowed entry into and out of
      the Abyss (and viewing it via farsight and such).  Bad JT, no biscuit.
      Thanks AZ for pointing it out.

Changes from 4.0.10 -> 5.0.0
--------------------------------------------------
   -- Fixed brokeness in conquest map generation caused by terrain patch
   -- Fixed potential namespace conflict on 'fill' from template.cpp
   -- Changed function of TEMPLATE order, as well as report format:
      the TEMPLATE order information is now stored with the other faction
      details (like TIMES), in the "players" file, like so:
      Template: {off|short|long|map}
      It is left to the server to handle this item (much like the
      "SendTimes:" item in the "players" file).  During turn run, there will
      be two files produced for each faction ID:  report.ID, and template.ID .
      In cases where "off" was chosen, a "short" report will be produced
      for the faction (thus allowing your server to propagate a set of
      orders automatically [if you do that sort of thing] to the next
      turn).
   -- Fixed bug in generation of extremely large and extremely small worlds
      and levels.  Second bug was introduced by artic towns patch.
   -- Fixed bug in movement costs when WEATHER_EXISTS was 0
   -- Fixed the broken 'faction: newNoLeader' and 'startLoc:' directives.
      'Faction: new' now takes some additional parameters on the data line
	  so you can say 'Faction: new' (create a normal faction),
	  'Faction: new 10 10 1' (create a normal faction but put the initial
      leader in location 10,10,1 instead of nexus) or 'Faction: new noleader'
	  (you can also use 'Faction: new noleader 10 10 1') which will
	  create a leaderless faction (with the location if specified).  And
	  you can then use the newUnit/Item/Skill commands to customize that
	  unit exactly as you want.